fixed nav bar underline and spacing. made my name a return to home

--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -73,6 +73,8 @@
     &__link{
         text-decoration: none;
         color: $primary-textColor;
+        display: flex;
+        align-items: baseline;
     }
     
     &__menu{
@@ -97,9 +99,10 @@
         right: 0px;
         top:68px;
         width: 100%;
-        background-image: linear-gradient(transparent,rgba(0, 0, 0, 0.4));
+        background-image: linear-gradient(transparent,rgba(0, 0, 0, 0.7));
         margin: 0;
         text-decoration: none;
+        padding-top: 1.5rem;
         
 
         @include tablet {
@@ -123,7 +126,6 @@
         padding: 1rem 0 ;
         cursor: pointer;
         color: white;
-        text-decoration: blue;
 
 
         &:hover{
@@ -147,4 +149,8 @@
             display: none;
         }
     }
+}
+
+a{
+    text-decoration: none;
 }
